--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,11 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body{
-    color: #ffffff;
     background-color: #121212;
+    color: #ffffff;
+}
+input{
+    color: #121212;
 }
