--- a/src/pages/css/pasos.css
+++ b/src/pages/css/pasos.css
@@ -2,4 +2,13 @@
     width:99vw;
     max-width: 100vw;
     margin: 0 auto;
+    height: 100%;
+
 }
+
+html, body, #root {
+    height: 100%;
+    min-height: 100%;
+}
+
+
