--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,13 @@
   html{
     background-color: #150f16;
   }
+
+
+     html,
+     body,
+     #root {
+       display: flex;
+       flex-direction: column;
+       min-height: 100%;
+       
+     }
