--- a/resources/Herramientas.css
+++ b/resources/Herramientas.css
@@ -5,9 +5,23 @@
   text-align: center;
 }
 
+.spinner{
+  border: 16px solid black;
+  border-radius: 50%;
+  border-top: 16px solid transparent;
+  width: 120px;
+  height: 120px;
+  animation: rotate 0.5s linear infinite;
+}
+
+@keyframes rotate {
+  0% { transform: rotate(0deg);}
+  100% { transform: rotate(360deg);}
+}
+
 .imagen {
-  width: 150px;
-  height: 150px;
+  width: 170px;
+  height: 170px;
 }
 
 .cuerpo {
